add `missionTemplates` and `providers` member resolution for `AssetClass` (graphql)